# ClassicalSpin_Cpp

./: .gitignore  CMakeLists.txt  LICENSE  OUTPUT_FORMATS.md  README.md  TmFeO3_2DCS.cpp  binning_analysis.h  experiments.h  fitting.h  lattice.h  lattice_strain_field.h  mixed_lattice.h  molecular_dynamic_BCAO.cpp  molecular_dynamic_BCAO_songvilay.cpp  molecular_dynamic_TmFeO3.cpp  molecular_dynamic_kitaev_honeycomb.cpp  molecular_dynamic_pyrochlore.cpp  parallel_tempering_BCAO.cpp  parallel_tempering_BCAO_songvilay.cpp  parallel_tempering_TmFeO3.cpp  parallel_tempering_pyrochlore.cpp  phase_diagram_pyrochlore.cpp  pyrochlore_2DCS.cpp  pyrochlore_fit.cpp  pyrochlore_line_scan.cpp  reader_TmFeO3.py  reader_honeycomb.py  reader_job_array.py  reader_pyrochlore.py  simple_linear_alg.h  simulated_annealing_TmFeO3.cpp  simulated_annealing_honeycomb.cpp  specific_heat_Pr2ZrO7.txt  test.cpp  test_cblas_dgemm.cpp  unitcell.h
BCAO_test/: 0Sxx_global.txt  0Sxy_global.txt  0Sxz_global.txt  0Syy_global.txt  0Syz_global.txt  0Szz_global.txt  0_DSSF.txt
NCTO_project_paper/: .gitignore
TFO_4_0_xii=0.05/: parameters.txt  spin_SU2.txt  spin_SU3.txt  spin_zero.txt_SU2.txt  spin_zero.txt_SU3.txt
docs/: experiments.md  optimization_notes.tex  optimization_notes_bench_results.txt  optimization_notes_bench_results_v2.txt  optimization_notes_bench_results_v3_baseline.txt  optimization_notes_bench_results_v4_after_me_fusion.csv  optimization_notes_bench_results_v4_pre_ode.csv  optimization_notes_bench_results_v5_after_ode.csv  optimization_notes_bench_results_v6_after_parallel_mc.csv  optimization_notes_bench_results_v7_after_md_heap_free.csv  optimization_notes_bench_results_v8_sota_mc.csv  optimization_notes_bench_results_v8_sota_md.csv  python_tools.md  refactor_backlog.md  tmfeo3_chi_eom_explicit.toc  tmfeo3_chi_selection_rules.aux  tmfeo3_chi_selection_rules.out  tmfeo3_chi_selection_rules.tex  tmfeo3_chi_selection_rules.toc  tmfeo3_chi_w_global_lambda12_audit.aux  tmfeo3_chi_w_global_lambda12_audit.md  tmfeo3_chi_w_global_lambda12_audit.out  tmfeo3_chi_w_global_lambda12_audit.tex  tmfeo3_geomII_endtoend_pipeline.md  tmfeo3_hamiltonian.md  tmfeo3_hamiltonian_summary.aux  tmfeo3_hamiltonian_summary.out  tmfeo3_hamiltonian_summary.tex  tmfeo3_hamiltonian_summary.tex.bak  tmfeo3_hamiltonian_summary.toc  tmfeo3_magnon_flavorwave.aux  tmfeo3_magnon_flavorwave.blg  tmfeo3_magnon_flavorwave.fdb_latexmk  tmfeo3_magnon_flavorwave.fls  tmfeo3_magnon_flavorwave.out  tmfeo3_magnon_flavorwave.toc  tmfeo3_notes.aux  tmfeo3_notes.blg  tmfeo3_notes.fdb_latexmk  tmfeo3_notes.fls  (+10 more)
example_configs/: HDF5_OUTPUT_FORMAT.md  README.md
legacy/: CMakeLists.txt
run_scripts/: TmFeO3_2DCS.cpp  experiments.h  molecular_dynamic_BCAO.cpp  molecular_dynamic_BCAO_emily.cpp  molecular_dynamic_TmFeO3.cpp  molecular_dynamic_kitaev_honeycomb.cpp  molecular_dynamic_kitaev_honeycomb_refractored.cpp  molecular_dynamic_kitaev_honeycomb_refractored.cu  molecular_dynamic_pyrochlore.cpp  non_kramer_magnetization.cpp  parallel_tempering_BCAO_emily.cpp  parallel_tempering_TmFeO3.cpp  parallel_tempering_pyrochlore.cpp  pyrochlore_fit.cpp  simulated_annealing_BCAO_emily.cpp  simulated_annealing_TmFeO3.cpp  simulated_annealing_honeycomb.cpp  test_lattice_equivalence.cpp  test_md_comparison.cpp  test_md_comparison_new.cpp  unified_simulation.cpp
sim_TmFeO3_Finite_T=0.01J1/: pos_SU2.txt  spin0_SU2.txt  spin0_SU3.txt
sim_TmFeO3_config_xii=0/: pos_SU3.txt  spin0_SU2.txt  spin0_SU3.txt
src/: CMakeLists.txt  TmFeO3_2DCS.cpp  binning_analysis.h  convergence_monitor.h  cuda_contractions.cu  cuda_contractions.cuh  cuda_contractions_wrapper.cuh  experiments.h  fitting.h  gpu_common_helpers.cu  gpu_common_helpers.cuh  gpu_interface.h  hdf5_io.h  helper.h  lattice.h  lattice_config.h  lattice_cuda.cu  lattice_cuda.cuh  lattice_gpu.cu  lattice_gpu.cuh  lattice_runtime.h  lattice_strain_field.h  mixed_lattice.h  mixed_lattice_dynamic.h  mixed_lattice_gpu.cu  mixed_lattice_gpu.cuh  mixed_lattice_gpu_api.h  mixed_lattice_runtime.h  molecular_dynamic_BCAO.cpp  molecular_dynamic_BCAO_emily.cpp  molecular_dynamic_BCAO_songvilay.cpp  molecular_dynamic_TmFeO3.cpp  molecular_dynamic_kitaev_honeycomb.cpp  molecular_dynamics.cu  molecular_dynamics.cuh  non_kramer_magnetization.cpp  parallel_tempering_BCAO_songvilay.cpp  parallel_tempering_TmFeO3.cpp  simple_linear_alg.cpp  simple_linear_alg.h  (+11 more)
src/apps/: analyze_phonon_m_order.cpp  bench_integrators.cpp  bench_mc.cpp  bench_md.cpp  diag_tmfeo3_gamma2_canonical.cpp  diag_tmfeo3_gamma2_sa.cpp  diag_tmfeo3_k2y_ramp.cpp  diag_tmfeo3_kminus_scan.cpp  evaluate_phonon_energy_path.cpp  fix_tmfeo3_su3_seed.cpp  gneb_field_eval.cpp  runners_lattice.cpp  runners_mixed.cpp  runners_parameter_sweep.cpp  runners_phonon.cpp  runners_strain.cpp  spin_solver.cpp  spin_solver_runners.h  test_e1_phonon_regressions.cpp  test_global_frame_equivalence.cpp  test_mixed_gpu_cpu_equivalence.cpp  test_mixed_trilinear_regressions.cpp  test_pt_strain.cpp  test_pulse_chunking_alignment.cpp  test_pulse_drive_tolerance.cpp  test_strain_phonon_regressions.cpp  test_tmfeo3_fe_legacy_frame_flags.cpp  test_tmfeo3_legacy_frame_flags.cpp  test_zigzag_strain.cpp  unified_simulation.cpp
src/core/: gneb.cpp  gneb_strain.cpp  kcto_notes.tex  lattice_accumulator.cpp  lattice_mc.cpp  lattice_md.cpp  lattice_observables.cpp  lattice_pt.cpp  mixed_lattice_mc.cpp  mixed_lattice_md.cpp  mixed_lattice_observables.cpp  mixed_lattice_pt.cpp  ncto_lattice.cpp  phonon_lattice.cpp  simple_linear_alg.cpp  spin_config.cpp  strain_phonon_lattice.cpp  unified_config.cpp  unitcell_builders.cpp
src/dynamics/: hdf5_io.h  lattice.h  simple_linear_alg.h
src/gpu/: gpu_common_helpers.cu  lattice_gpu.cu  mixed_lattice_gpu.cu
util/: ANIMATION_FEATURES_SUMMARY.md  BUGFIX_INHOMOGENEOUS_GRIDS.md  BUGFIX_SKIP_OUTPUT_DIRS.md  FFT_OPTIMIZATION_SUMMARY.md  FIX_SUMMARY.md  QUICK_FIX.md  README.md  README_ANIMATIONS.md  SingleQAnsatzHoneycomb.py  USAGE_GUIDE.md  analyze_chi_selection_rules.py  analyze_dm_mixing.py  analyze_fe_spectrum.py  analyze_fe_spectrum_detailed.py  (+44 more)
(+217 files in other folders)
